Scrollbar issue and Exercises video error fixed

--- a/src/App.css
+++ b/src/App.css
@@ -14,56 +14,27 @@ body {
   width: 0px;
 }
 
-.slick-arrow.slick-prev {
-  left: 10px;
+.slider-container {
+  width: 100%; /* Ensure the slider takes up the full width */
 }
 
-.slick-arrow.slick-next {
-  right: 10px;
+.slick-slide {
+  width: auto !important; /* Ensure slides adjust automatically */
+  margin: 0 10px; /* Optional: Add spacing between slides */
 }
 
-.slick-arrow {
-  display: block;
-  background: #FF2625;
-  border-radius: 50%;
-  padding: 10px;
+.slick-prev:before,
+.slick-next:before {
+  content: none !important;
+}
+
+.slick-prev {
   z-index: 1;
 }
 
-
-/* .right-arrow,
-.left-arrow {
-  cursor: pointer;
-  background: transparent;
-  outline: none;
-  border: none;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #FF2625;
-  font-size: 25px;
-  border-radius: 4px;
-  position: absolute;
-  bottom: -20px;
-  right: 80px;
-  transform: scale(1, 1);
-  transition: 0.3s all ease-in-out;
+.slick-next {
+  z-index: 1;
 }
-
-.right-arrow {
-  right: 140px;
-}
-
-.right-arrow:hover,
-.left-arrow:hover {
-  transform: scale(1.3, 1.3);
-}
-
-.react-horizontal-scrolling-menu--wrapper {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-} */
 
 .detail-image {
   width: 729px;
@@ -92,6 +63,7 @@ body {
   padding-bottom: 10px;
   transform: scale(1, 1);
   transition: 0.3s all ease-in-out;
+  box-sizing: border-box;
 }
 
 .exercise-card img {
@@ -128,16 +100,6 @@ body {
     height: 300px;
   }
 
-
-  .react-horizontal-scrolling-menu--scroll-container {
-    width: 500px;
-  }
-
-  .left-arrow,
-  .right-arrow {
-    position: static !important;
-  }
-
   .hero-banner-img {
     display: none;
   }
@@ -153,9 +115,18 @@ body {
 
 }
 
-@media screen and (max-width:400px) {
+@media screen and (max-width:500px) {
   .exercise-card {
     width: 280px;
+  }
+
+  .slick-prev {
+    z-index: 1;
+    left: 10px !important;
+  }
+  
+  .slick-next {
+    right: 10px !important;
   }
 }
 
